set new default depth for pipeline to 80 000

--- a/nextflow.config
+++ b/nextflow.config
@@ -230,7 +230,7 @@ params {
     arguments_umitools_dedup    = "--umi-separator=':' --method cluster --unmapped-reads use"
     arguments_picard_markduplicates = '--ASSUME_SORTED true --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp --REMOVE_DUPLICATES true'
     arguments_picard_collectmultiplemetrics = '--ASSUME_SORTED true --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp'
-    arguments_custom_mpileup    = null
+    arguments_custom_mpileup    = "--max-depth 80000"
     arguments_mosdepth          = null
 
     // ignore overlapping reads - Do not skip anomalous read pairs in variant calling. - Maximum number of reads to start to consider at each location - Minimum base quality
