removing redundant samtools_sort

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1111,6 +1111,14 @@ process {
                 mode: params.publish_dir_mode,
                 pattern: '*.{tsv,log}',
                 saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ],
+            [
+                path: { "${meta.iteration}" == "variant-calling" ?
+                    "${params.outdir}/variants/mapping-info/deduplicate/bam/${meta.sample}" :
+                    "${params.outdir}/assembly/polishing/iterations/${meta.step}/deduplicate/bam/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.{bam,cram,crai,csi}",
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
             ]
         ]
     }
@@ -1138,6 +1146,14 @@ process {
                 mode: params.publish_dir_mode,
                 pattern: '*metrics.txt',
                 saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ],
+            [
+                path: { "${meta.iteration}" == "variant-calling" ?
+                    "${params.outdir}/variants/mapping-info/deduplicate/bam/${meta.sample}" :
+                    "${params.outdir}/assembly/polishing/iterations/${meta.step}/deduplicate/bam/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.{bam,cram,crai,csi}",
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
             ]
         ]
     }
@@ -1148,24 +1164,12 @@ process {
         publishDir =  [ enabled: false ]
     }
 
-    withName: SAMTOOLS_SORT_DEDUPPED {
-        ext.prefix = { "${meta.id}_${meta.previous_step}.sorted" } // DON'T CHANGE
-        publishDir = [
-            path: { "${meta.iteration}" == "variant-calling" ?
-                "${params.outdir}/variants/mapping-info/deduplicate/sorted_bam/${meta.sample}" :
-                "${params.outdir}/assembly/polishing/iterations/${meta.step}/deduplicate/sorted_bam/" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{bam,cram,crai,csi}",
-            saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
-        ]
-    }
-
     withName: ".*BAM_STATS_METRICS:SAMTOOLS_INDEX" {
         ext.prefix = { "${meta.id}_${meta.previous_step}.sorted" } // DON'T CHANGE
         publishDir = [
             path: { "${meta.iteration}" == "variant-calling" ?
-                "${params.outdir}/variants/mapping-info/deduplicate/sorted_bam/${meta.sample}" :
-                "${params.outdir}/assembly/polishing/iterations/${meta.step}/deduplicate/sorted_bam/" },
+                "${params.outdir}/variants/mapping-info/deduplicate/bam/${meta.sample}" :
+                "${params.outdir}/assembly/polishing/iterations/${meta.step}/deduplicate/bam/" },
             mode: params.publish_dir_mode,
             pattern: '*.bai',
             saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
