Giving Kaiju more memory

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -309,6 +309,7 @@ process {
 
     withName: KAIJU_KAIJU {
         ext.args = params.arguments_kaiju
+        memory     = { 200.GB * task.attempt }
         publishDir = [
             path: { "${params.outdir}/metagenomic_diversity/kaiju/" },
             mode: params.publish_dir_mode,
@@ -626,6 +627,7 @@ process {
     withName: KAIJU_CONTIG {
         ext.prefix = {"${meta.id}_kaiju"}
         ext.args   = params.arguments_kaiju_contig
+        memory     = { 200.GB * task.attempt }
         publishDir = [
             path: { "${params.outdir}/assembly/polishing/intermediate/precluster/kaiju/" },
             mode: params.publish_dir_mode,
