--- a/conf/modules.config
+++ b/conf/modules.config
@@ -137,6 +137,12 @@ process {
         ]
     }
 
+    withName: CAT_FASTQ {
+        publishDir = [
+            enabled: false
+        ]
+    }
+
     withName: BBMAP_BBDUK {
         ext.args = params.arguments_bbduk
         publishDir = [
