--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,7 @@ params {
     skip_fastqc                 = false
     save_final_reads            = true
     save_intermediate_reads     = false
+    merge_reads                 = false
 
     // > UMI
     with_umi                    = false
@@ -378,6 +379,7 @@ profiles {
     }
     test              { includeConfig 'conf/tests/test.config'              }
     test_full         { includeConfig 'conf/tests/test_full.config'         }
+    test_group        { includeConfig 'conf/tests/test_group.config'        }
     test_umi          { includeConfig 'conf/tests/test_umi.config'          }
     test_fail_mapped  { includeConfig 'conf/tests/test_fail_mapped.config'  }
     test_fail_db      { includeConfig 'conf/tests/test_fail_db.config'      }
