--- a/conf/tests/test.config
+++ b/conf/tests/test.config
@@ -34,12 +34,14 @@ params {
     skip_sspace_basic           = true
     host_k2_db                  = 'https://github.com/nf-core/test-datasets/raw/viralrecon/genome/kraken2/kraken2_hs22.tar.gz'
 
+    merge_reads                 = true
+
     skip_read_classification    = true
     save_databases              = true
     kaiju_db                    = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_viruses_2023-05-26.tgz"
 
     reference_pool              = "https://github.com/Joon-Klaps/nextclade_data/raw/old_datasets/data/nextstrain/sars-cov-2/MN908947/sequences.fasta"
-    mapping_constraints          = "${projectDir}/assets/samplesheets/mapping_constraints.csv"
+    mapping_constraints         = "${projectDir}/assets/samplesheets/mapping_constraints.csv"
 
     save_intermediate_polishing = true
     intermediate_mapping_stats  = false
