--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1454,6 +1454,37 @@ process {
         ]
     }
 
+    withName: SNPEFF_BUILD {
+        publishDir = [
+            enabled:false
+        ]
+    }
+
+    withName: SNPEFF_SNPEFF {
+        ext.args = params.arguments_snpeff
+        publishDir = [
+            [
+                path: { "${params.outdir}/variants/annotation/${meta.sample}"},
+                mode: params.publish_dir_mode,
+                pattern: "*.vcf",
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ]
+        ]
+    }
+
+    withName: SNPSIFT_EXTRACTFIELDS {
+        ext.args = params.arguments_snpsift_extractfields
+        publishDir = [
+            [
+                path: { "${params.outdir}/variants/annotation/${meta.sample}"},
+                mode: params.publish_dir_mode,
+                pattern: "*.txt",
+                saveAs: { filename -> params.prefix || params.global_prefix  ? "${params.global_prefix}-$filename" : filename }
+            ]
+        ]
+    }
+
+
     // consensus consensus QC
     withName: CHECKV_ENDTOEND {
         ext.args = params.arguments_checkv
@@ -1555,9 +1586,6 @@ process {
         ]
     }
 
-    //
-    // ANNOTATION
-    //
     withName: CUSTOM_MULTIQC {
         publishDir = [
             [
