--- a/nextflow.config
+++ b/nextflow.config
@@ -123,6 +123,7 @@ params {
 
     // variant calling
     skip_variant_calling        = false
+    skip_vcf_annotation         = false
 
     // CONSENSUS QC
     skip_consensus_qc           = false
@@ -134,7 +135,7 @@ params {
     skip_blast_qc               = false
     skip_alignment_qc           = true
     annotation_db               = "ftp://ftp.expasy.org/databases/viralzone/2020_4/virosaurus90_vertebrate-20200330.fas.gz"
-    skip_annotation             = false
+    skip_consensus_annotation   = false
     mmseqs_searchtype           = 4
 
     // Global
@@ -260,6 +261,9 @@ params {
     arguments_ivar_consensus1  =  '-t 0 -q 20 -m 10 -n N'
     // Do not skip anomalous read pairs in variant calling. - Maximum number of reads to start to consider at each location, 0 means no limit - Minimum base quality - Disable probabilistic realignment for the computation of base alignment quality - Output absolutely all positions, including unused reference sequences
     arguments_ivar_consensus2  = '--count-orphans --max-depth 0 --min-BQ 20 --no-BAQ -aa'
+
+    arguments_snpeff            = null
+    arguments_snpsift_extractfields = '-s "," -e "."'
 
     arguments_checkv            = '--remove_tmp'
     arguments_mafft_iterations  = '--auto --adjustdirection'
