don't make sspace_basic default

--- a/nextflow.config
+++ b/nextflow.config
@@ -65,7 +65,7 @@ params {
     skip_assembly               = false
     mapping_constraints         = null
     assemblers                  = 'spades,megahit'
-    skip_sspace_basic           = false
+    skip_sspace_basic           = true
     skip_contig_prinseq         = false
     read_distance               = 350
     read_distance_sd            = .75
