--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1378,7 +1378,7 @@ process {
 
     withName: MAKE_BED_MASK {
         ext.args = params.arguments_make_bed_mask
-        ext.args2 = 10
+        ext.args2 = "${params.min_consensus_depth}"
         ext.prefix = { "${meta.id}_${meta.previous_step}" } // DON'T CHANGE
         publishDir = [
             path: { "${params.outdir}/consensus/mask/${meta.step}/${meta.sample}"},
