--- a/nextflow.config
+++ b/nextflow.config
@@ -112,6 +112,7 @@ params {
     deduplicate                     = true
     variant_caller                  = 'ivar' // ivar, bcftools
     allele_frequency                = 0.75
+    min_consensus_depth             = 5
     call_intermediate_variants      = false
     intermediate_variant_caller     = variant_caller
     ivar_header                     = null
@@ -240,7 +241,7 @@ params {
     // Ploidy of the sample, how many alleles should be considered at a location - Keep alternate alleles - Masked reference positions (reference is 'N') need to be considered as well - Call multiallelic variants - Only output variant sites that are significant
     arguments_bcftools_mpileup2 = '--ploidy 2 --keep-alts --keep-masked-ref --multiallelic-caller --variants-only'
     // Minimum depth of coverage at a site to consider it for variant calling
-    arguments_bcftools_mpileup3 = "--include 'INFO/DP>=5'"
+    arguments_bcftools_mpileup3 = "--include 'INFO/DP>=${params.min_consensus_depth}'"
     // Do not turn on indel normalisation, only split up - Output compressed VCF - split multiallelic sites into biallelic records (-) and SNPs and indels should be merged into a single record, specify any.
     arguments_bcftools_norm     = '--do-not-normalize --output-type z --multiallelics -any'
     arguments_bcftools_stats    = null
@@ -252,13 +253,13 @@ params {
     arguments_bedtools_maskfasta = null
     arguments_bcftools_consensus = null
 
-    arguments_ivar_variants1    = '-q 20 -m 5'
+    arguments_ivar_variants1    = "-q 20 -m ${params.min_consensus_depth}"
     arguments_ivar_variants2    = '--ignore-overlaps --count-orphans --max-depth 0 --no-BAQ --min-BQ 0'
     // -a output all postions
     arguments_make_bed_mask     = '-a --ignore-overlaps --count-orphans --max-depth 0 --no-BAQ --min-BQ 0'
 
-    // frequency to call consensus, majority rule (-t) - minimum quality score of base (-q 20) - minimum depth to call consensus (-m 5) - Characters to print in regions with less coverage
-    arguments_ivar_consensus1  =  '-t 0 -q 20 -m 5 -n N'
+    // frequency to call consensus, majority rule (-t) - minimum quality score of base (-q 20) - minimum depth to call consensus (-m) - Characters to print in regions with less coverage
+    arguments_ivar_consensus1  =  "-t 0 -q 20 -m ${params.min_consensus_depth} -n N"
     // Do not skip anomalous read pairs in variant calling. - Maximum number of reads to start to consider at each location, 0 means no limit - Minimum base quality - Disable probabilistic realignment for the computation of base alignment quality - Output absolutely all positions, including unused reference sequences
     arguments_ivar_consensus2  = '--count-orphans --max-depth 0 --min-BQ 20 --no-BAQ -aa'
 
