Creating testdatasets using nf-core repo

--- a/conf/tests/test_fail_db.config
+++ b/conf/tests/test_fail_db.config
@@ -23,9 +23,9 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function with a reference pool without matches'
 
     // Input data
-    input     = "${projectDir}/assets/samplesheets/samplesheet.csv"
+    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
     outdir    = "testing"
-    metadata  = "${projectDir}/assets/samplesheets/metadata_test.tsv"
+    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
     trim_tool                   = 'fastp'
@@ -35,8 +35,8 @@ params {
     skip_iterative_refinement   = true
 
     skip_read_classification    = true
-    kaiju_db                    = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_viruses_2023-05-26.tgz"
-    reference_pool              = "https://raw.githubusercontent.com/Joon-Klaps/nextclade_data/old_datasets/data/nextstrain/ebola/zaire/sequences.fasta"
+    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
+    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/ebov-zaire.fasta'
 
     skip_variant_calling        = true
     intermediate_mapping_stats  = true
