--- a/conf/tests/test_group.config
+++ b/conf/tests/test_group.config
@@ -24,23 +24,23 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function when combining samples of the same group'
 
     // Input data
-    input     = "${projectDir}/assets/samplesheets/samplesheet_group.csv"
+    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet_group.csv'
     outdir    = "testing"
-    // metadata  = "${projectDir}/assets/samplesheets/metadata_test.tsv"
+    // metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
     trim_tool                   = 'fastp'
     assemblers                  = 'spades,megahit'
     skip_sspace_basic           = true
-    host_k2_db                  = 'https://github.com/nf-core/test-datasets/raw/viralrecon/genome/kraken2/kraken2_hs22.tar.gz'
+    host_k2_db                  = params.pipelines_testdata_base_path + 'viralmetagenome/db/kraken2_hs22.tar.gz'
 
     skip_read_classification    = true
     merge_reads                 = true
     save_databases              = true
-    kaiju_db                    = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_viruses_2023-05-26.tgz"
+    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
 
-    reference_pool              = "https://github.com/Joon-Klaps/nextclade_data/raw/old_datasets/data/nextstrain/sars-cov-2/MN908947/sequences.fasta"
-    mapping_constraints          = "${projectDir}/assets/samplesheets/mapping_constraints_group.csv"
+    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
+    mapping_constraints          = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_group.csv'
 
     save_intermediate_polishing = true
     intermediate_mapping_stats  = false
