--- a/conf/tests/test_fail_mapped.config
+++ b/conf/tests/test_fail_mapped.config
@@ -22,9 +22,9 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function with a non mat external reference'
 
     // Input data
-    input     = "${projectDir}/assets/samplesheets/samplesheet.csv"
+    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
     outdir    = "testing"
-    metadata      = "${projectDir}/assets/samplesheets/metadata_test.tsv"
+    metadata      = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
     trim_tool                   ='fastp'
@@ -32,9 +32,9 @@ params {
     skip_assembly               = true
 
     skip_read_classification  = true
-    kaiju_db                    = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_viruses_2023-05-26.tgz"
-    reference_pool              = "https://github.com/Joon-Klaps/nextclade_data/raw/old_datasets/data/nextstrain/sars-cov-2/MN908947/sequences.fasta"
-    mapping_constraints           = "${projectDir}/assets/samplesheets/mapping_constraints_fail.tsv"
+    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
+    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/genomes/sarscov2.fasta'
+    mapping_constraints           = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_fail.tsv'
 
     min_mapped_reads            = 100
     intermediate_mapping_stats  = true
