--- a/conf/tests/test_nothing.config
+++ b/conf/tests/test_nothing.config
@@ -23,7 +23,7 @@ params {
     config_profile_description = 'Skip all steps and run a minimal test'
 
     // Input data
-    input     = "${projectDir}/assets/samplesheets/samplesheet.csv"
+    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
     outdir    = "testing"
 
     skip_preprocessing   = true
