--- a/conf/tests/test_umi.config
+++ b/conf/tests/test_umi.config
@@ -22,26 +22,25 @@ params {
     config_profile_description = 'UMI test dataset to check pipeline function for reads with unique molecular identifiers (UMIs)'
 
     // Input data
-    input     = "${projectDir}/assets/samplesheets/samplesheet.csv"
+    input     = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/samplesheet.csv'
     outdir    = "testing"
-    metadata  = "${projectDir}/assets/samplesheets/metadata_test.tsv"
+    metadata  = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/metadata_test.tsv'
 
     skip_complexity_filtering   = false
     trim_tool                   ='fastp'
     with_umi                    = true
     skip_umi_extract            = false
     umi_deduplicate             = 'both'
-    host_k2_db                  = 'https://github.com/nf-core/test-datasets/raw/viralrecon/genome/kraken2/kraken2_hs22.tar.gz'
+    host_k2_db                  = params.pipelines_testdata_base_path + 'viralmetagenome/db/kraken2_hs22.tar.gz'
     assemblers                  = 'spades'
 
     skip_read_classification    = true
     save_databases              = true
     skip_sspace_basic           = false
-    kaiju_db                    = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_viruses_2023-05-26.tgz"
+    kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
+    reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
 
-    reference_pool              = "https://github.com/Joon-Klaps/nextclade_data/raw/old_datasets/data/nextstrain/sars-cov-2/MN908947/sequences.fasta"
-    mapping_constraints         = "${projectDir}/assets/samplesheets/mapping_constraints.csv"
-
+    mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints.csv'
     save_intermediate_polishing = true
     save_intermediate_reads     = true
     intermediate_mapping_stats  = true
