Renaming all the occurences of viralgenie to viralmetagenome

--- a/.github/ISSUE_TEMPLATE/website_feedback.yml
+++ b/.github/ISSUE_TEMPLATE/website_feedback.yml
@@ -1,5 +1,5 @@
 name: Website feedback
-description: Report an issue or suggest an improvement for the viralgenie website
+description: Report an issue or suggest an improvement for the viralmetagenome website
 labels: ["website", "documentation"]
 body:
   - type: textarea
