--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,7 +8,7 @@ body:
         Before you post this issue, please check the documentation:
 
         - [nf-core website: troubleshooting](https://nf-co.re/usage/troubleshooting)
-        - [Viralgenie pipeline documentation](https://joon-klaps.github.io/viralgenie/latest/usage)
+        - [Viralmetagenome pipeline documentation](https://joon-klaps.github.io/viralmetagenome/latest/usage)
 
   - type: textarea
     id: description
@@ -47,4 +47,4 @@ body:
         * Executor _(eg. slurm, local, awsbatch)_
         * Container engine: _(e.g. Docker, Singularity, Conda, Podman, Shifter, Charliecloud, or Apptainer)_
         * OS _(eg. CentOS Linux, macOS, Linux Mint)_
-        * Version of nf-core/viralgenie _(eg. 1.1, 1.5, 1.8.2)_
+        * Version of nf-core/viralmetagenome _(eg. 1.1, 1.5, 1.8.2)_
