--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,4 +4,4 @@ contact_links:
     about: Please join the nf-core community here for general nextflow pipeline discussions.
   - name: "Find me on the nf-core slack"
     url: https://nfcore.slack.com/team/U043Y6FQR6J
-    about: Ask me anything about viralgenie on slack.
+    about: Ask me anything about viralmetagenome on slack.
