--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   run-platform:
     name: Run AWS tests
-    if: github.repository == 'nf-core/viralgenie'
+    if: github.repository == 'nf-core/viralmetagenome'
     runs-on: ubuntu-latest
     steps:
       # Launch workflow using Seqera Platform CLI tool action
@@ -20,10 +20,10 @@ jobs:
           access_token: ${{ secrets.TOWER_ACCESS_TOKEN }}
           compute_env: ${{ secrets.TOWER_COMPUTE_ENV }}
           revision: ${{ github.sha }}
-          workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/viralgenie/work-${{ github.sha }}
+          workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/viralmetagenome/work-${{ github.sha }}
           parameters: |
             {
-              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/viralgenie/results-test-${{ github.sha }}"
+              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/viralmetagenome/results-test-${{ github.sha }}"
             }
           profiles: test
 
