--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
   test-variant-callers:
     name: "Run pipeline with test data (${{ matrix.NXF_VER }}) | (${{ matrix.profile }}) | (${{ matrix.VARIANT_CALLER }} - ${{ matrix.CONSENSUS_CALLER }})"
     # Only run on push if this is the nf-core dev branch (merged PRs)
-    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'Joon-Klaps/viralgenie') }}"
+    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'nf-core/viralmetagenome') }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -108,7 +108,7 @@ jobs:
   test-cluster-methods:
     name: "Run pipeline with test data (${{ matrix.NXF_VER }}) | (${{ matrix.profile }}) | (${{ matrix.CLUSTER_METHOD }})"
     # Only run on push if this is the nf-core dev branch (merged PRs)
-    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'Joon-Klaps/viralgenie') }}"
+    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'nf-core/viralmetagenome') }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -192,7 +192,7 @@ jobs:
   test-others:
     name: "Run pipeline with various test profiles (${{ matrix.test_name }}) | (${{ matrix.NXF_VER }}) | (${{ matrix.profile }})"
     # Only run on push if this is the nf-core dev branch (merged PRs)
-    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'Joon-Klaps/viralgenie') }}"
+    if: "${{ github.event_name != 'push' || (github.event_name == 'push' && github.repository == 'nf-core/viralmetagenome') }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
