--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -4,8 +4,8 @@ org_path:
 repository_type: pipeline
 lint:
   files_unchanged:
-    - docs/images/nf-core-viralgenie_logo_light.png
-    - docs/images/nf-core-viralgenie_logo_dark.png
+    - docs/images/nf-core-viralmetagenome_logo_light.png
+    - docs/images/nf-core-viralmetagenome_logo_dark.png
     - docs/README.md
     - .github/ISSUE_TEMPLATE/bug_report.yml
     - .github/ISSUE_TEMPLATE/config.yml
@@ -28,14 +28,14 @@ lint:
   files_exist:
     - .github/CONTRIBUTING.md
     - CITATIONS.md
-    - assets/nf-core-viralgenie_logo_light.png
+    - assets/nf-core-viralmetagenome_logo_light.png
     - conf/test.config
     - conf/test_full.config
     - docs/README.md
   actions_awsfulltest: false
   actions_ci: false
 template:
-  name: viralgenie
+  name: viralmetagenome
   description: a bioinformatics best-practice analysis pipeline for reconstructing
     consensus genomes and to identify intra-host variants from metagenomic sequencing
     data or enriched based sequencing data like hybrid capture.
