--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a full size pipeline test.
 
     Use as follows:
-        nextflow run Joon-Klaps/viralgenie -profile test_full,<docker/singularity> --outdir <OUTDIR>
+        nextflow run nf-core/viralmetagenome -profile test_full,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
