fixing default values with harcoded github locations

--- a/nextflow.config
+++ b/nextflow.config
@@ -144,9 +144,9 @@ params {
     // MultiQC options
     multiqc_config              = null
     multiqc_title               = null
-    multiqc_logo                = "https://github.com/nf-core/viralmetagenome/blob/dev/docs/images/Viralmetagenome-nf-core-theme.png?raw=true"
+    multiqc_logo                = null
     max_multiqc_email_size      = '25.MB'
-    custom_table_headers        = "https://github.com/nf-core/viralmetagenome/raw/refs/heads/dev/assets/custom_table_headers.yml"
+    custom_table_headers        = null
     multiqc_methods_description = null
 
     // Boilerplate options
