--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -2,7 +2,8 @@ lint:
   files_exist:
     - conf/test.config
     - conf/test_full.config
-    - docs/README.md
+    - conf/igenomes.config
+    - conf/igenomes_ignored.config
   multiqc_config: false
 nf_core_version: 3.3.1
 repository_type: pipeline
@@ -18,4 +19,5 @@ template:
   outdir: .
   skip_features:
     - igenomes
+    - multiqc
   version: 0.1.3dev
