--- a/nextflow.config
+++ b/nextflow.config
@@ -404,7 +404,7 @@ includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !pa
 
 
 // Load nf-core/viralmetagenome custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
+// nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
 // includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/viralmetagenome.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
@@ -463,29 +463,28 @@ manifest {
     name            = 'nf-core/viralmetagenome'
     author          = """Joon Klaps, Philippe Lemey, Liana Kafetzopoulou""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
             name: 'Joon Klaps',
-            affiliation: '',
+            affiliation: 'KU Leuven, Rega Institute for Medical Research',
             email: '',
-            github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
+            github: 'Joon-Klaps',
+            contribution: ["author", "maintainer"],
+            orcid: '0000-0002-2507-0430'
         ],
         [
             name: ' Philippe Lemey',
-            affiliation: '',
+            affiliation: 'KU Leuven, Rega Institute for Medical Research',
             email: '',
             github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
+            contribution: ["author"],
             orcid: ''
         ],
         [
             name: ' Liana Kafetzopoulou',
-            affiliation: '',
+            affiliation: 'KU Leuven, Rega Institute for Medical Research',
             email: '',
             github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
+            contribution: ["author"],
             orcid: ''
         ],
     ]
