slightly modify full_tests

--- a/conf/tests/test.config
+++ b/conf/tests/test.config
@@ -34,7 +34,7 @@ params {
 
     merge_reads                 = true
     skip_read_classification    = true
-    save_databases              = true
+    save_databases              = false
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
     mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints.csv'
