--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -35,8 +35,8 @@ params {
     skip_sspace_basic           = false
     assemblers                  = 'megahit,trinity,spades'
 
-    skip_read_classification    = false
-    save_databases              = true
+    skip_read_classification    = true
+    save_databases              = false
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
 
