--- a/modules/nf-core/bedtools/maskfasta/meta.yml
+++ b/modules/nf-core/bedtools/maskfasta/meta.yml
@@ -22,10 +22,12 @@ input:
         type: file
         description: Bed feature file
         pattern: "*.{bed}"
-  - - fasta:
+        ontologies: []
+    - fasta:
         type: file
         description: Input fasta file
         pattern: "*.{fa,fasta}"
+        ontologies: []
 output:
   - fasta:
       - meta:
@@ -37,11 +39,14 @@ output:
           type: file
           description: Output masked fasta file
           pattern: "*.{fa}"
+          ontologies: []
   - versions:
       - versions.yml:
           type: file
           description: File containing software versions
           pattern: "versions.yml"
+          ontologies:
+            - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@joseespinosa"
   - "@drpatelh"
