--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -8,3 +8,4 @@ multiqc/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 multiqc/multiqc_report.html
 fastqc/*_fastqc.{html,zip}
 pipeline_info/*.{html,json,txt,yml}
+*.{bam,bam.bai,cram,cram.crai}
