--- a/nf-test.config
+++ b/nf-test.config
@@ -19,6 +19,7 @@ config {
 
     // load the necessary plugins
     plugins {
+        load "nft-bam@0.5.0"
         load "nft-utils@0.0.3"
     }
 }
