--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -1,22 +1,45 @@
 .DS_Store
-multiqc/multiqc_data/fastqc_top_overrepresented_sequences_table.txt
 multiqc/multiqc_data/multiqc.log
 multiqc/multiqc_data/multiqc_data.json
 multiqc/multiqc_data/multiqc_sources.txt
 multiqc/multiqc_data/multiqc_software_versions.txt
+multiqc/multiqc_data/fastqc*
+multiqc/multiqc_data/multiqc_fastqc.yaml
+multiqc/multiqc_data/multiqc_fastqc_1.yaml
+multiqc/multiqc_data/multiqc_fastqc_2.yaml
+multiqc/multiqc_data/multiqc_general_stats.txt
+multiqc/multiqc_data/mosdepth-coverage-per-contig-single.txt
+multiqc/multiqc_data/multiqc_samtools_flagstat.yaml
+multiqc/multiqc_data/multiqc_samtools_stats.yaml
+multiqc/multiqc_data/multiqc_samtools_stats_1.yaml
+multiqc/multiqc_data/samtools_alignment_plot.txt
+multiqc/multiqc_data/samtools-flagstat-dp_Percentage_of_total.txt
+multiqc/multiqc_data/samtools-flagstat-dp_Read_counts.txt
+multiqc/multiqc_data/samtools-stats-dp.txt
 multiqc/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 multiqc/multiqc_report.html
-**/fastqc/**_fastqc.{html,zip}
+overview-tables/samples_overview.tsv
+overview-tables/contigs_overview-with-iterations.tsv
+overview-tables/contigs_overview.tsv
+overview-tables/mapping_overview.tsv
 pipeline_info/*.{html,json,txt,yml}
+**/fastqc/**_fastqc.{html,zip}
+**/fastp/**fastp.html
 **/picard/**
-**/bam/**
-*.mpileup
-*.qual.txt
 **/stats/**
+**/prokka/**/*.log
+**/intermediate/blast/**
 variants/mapping-info/metrics/stats/**
+**/*kraken2_host.unclassified*.fastq.gz
+**/bam/*
+**/mosdepth/*
+**/flagstat/*
+**/*.bam
+**/*filtered.vcf.gz
+**/*.mpileup
+**/*_good_out.fasta
 **/*.log
-**/logs/**
+**/*kaiju.tsv
+**/*.qual.txt
 **/all_genomes.txt
 **/all_genomes.tsv
-**/prokka/**/*.log
-**/mosdepth/**
