--- a/nf-test.config
+++ b/nf-test.config
@@ -21,5 +21,7 @@ config {
     plugins {
         load "nft-bam@0.5.0"
         load "nft-utils@0.0.3"
+        load "nft-csv@0.1.0"
+        load "nft-vcf@1.0.7"
     }
 }
