Remove cluster tsv for being not consistent

--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -90,7 +90,7 @@ overview-tables/mapping_overview.tsv
 **/intermediate/blast/**
 **/polishing/blast/**
 **/intermediate/cluster/*/*.json
-**/intermediate/cluster/*/*cluster.tsv
+**/polishing/**/*clusters.tsv
 
 # ------------------------------------------------------------------------------
 # Consensus quality control
